# ottr-hft-quant-cockpit

./: .env.example  .gitignore  .pre-commit-config.yaml  ALPHA_PLAN.md  AUDIT_PLAN.md  CLAUDE.md  CONTEXT.md  OBSERVABILITY_PLAN.md  PERF_PLAN.md  PROJECT.md  PROJECT_HANDBOOK.md  README.md  RISK_PLAN.md  STATE_INVENTORY.md  TEST_INFRA.md  TEST_READY.md  docker-compose.yml  redeploy.ps1  threat_model.md
.agents/: ORIGINAL_REQUEST.md
agent-gateway/: Dockerfile  find_broadcasts.py  pyproject.toml
agent-gateway/agent_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent-gateway/app/: config.py  llm_connector.py  main.py
agent-gateway/app/agents/: altcoin_screener.py  performance_optimizer.py  portfolio_manager.py  risk_auditor.py  sentiment_analyst.py  technical_analyst.py  trader.py
agent-gateway/app/routers/: api.py  discord_webhooks.py
agent-gateway/app/services/: journal_manager.py  market_proxy.py  sopr_provider.py  sse_manager.py
agent-gateway/tests/: conftest.py  test_auth.py  test_discord_sync.py  test_health.py  test_routes.py  test_snapshot.py
discord-bridge/: .coverage  .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  benchmark_poc.py  eval_backtest.py  eval_injection.py  eval_real_llm.py  eval_risk_overlay.py  eval_trades.py  eval_utils.py  requirements-dev.txt  requirements.txt  run_evals.py  task.md  test_vesper_poc.py  vesper_engine.py
docs/: RUNBOOK.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
market-engine/: Dockerfile  build.gradle.kts  (+1 more)
(+324 files in other folders)
