[project]
name = "agent-gateway"
version = "0.1.0"
description = "Python Agent Gateway for Crypto Trading Bot"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "openai>=1.14.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
